[package]
name = "bthome-recv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = { version = "0.10.1", features = ["jpeg"] }
btleplug = "0.10.5"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
eframe = { version = "0.22.0", features = ["persistence"] }
egui = { version = "0.22.0", features = ["persistence"] }
egui_extras = "0.22.0"
futures = "0.3.28"
pin-project = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.3.4"
