[package]
name = "bthome-recv"
description = "A receiver for BTHome broadcasts"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow            = "1.0.100"
btleplug          = "0.11.8"
bytes             = "1.11.0"
chrono            = { version = "0.4.42", features = ["serde"] }
clap              = "4.5.53"
eframe            = { version = "0.33.2", features = ["persistence"] }
egui              = { version = "0.33.2", features = ["persistence"] }
egui_extras       = "0.33.2"
egui_plot         = "0.34.0"
futures           = "0.3.31"
log               = "0.4.28"
pin-project       = "1.1.10"
pretty_env_logger = "0.5.0"
rand              = "0.9.2"
serde             = { version = "1.0.228", features = ["derive"] }
serde_json        = "1.0.145"
tokio             = { version = "1.48.0", features = ["full"] }
uuid              = "1.18.1"

[package.metadata.bundle]
name = "BTHome Receiver"
identifier = "red.dark.bthome-recv"
